[package]
name = "nanocount"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A dual-guide protospacer counter for long-read nanopore data"
repository = "https://github.com/noamteyssier/nanocount"
readme = "README.md"
categories = ["science::bioinformatics", "command-line-utilities"]
keywords = ["long-read", "nanopore", "grep", "crispr", "alignment"]

[dependencies]
anyhow = "1.0.100"
binseq = "0.8.3"
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
parking_lot = "0.12.5"
sassy = "0.1.10"
serde = { version = "1.0.228", features = ["derive"] }
